@@ -219,6 +219,7 @@ void ttHMultileptonLooseEventSaver::initialize(std::shared_ptr<top::TopConfig> c
     //Items and their PS
     std::vector<std::string> triggernames
     {   "HLT_e24_lhmedium_L1EM18VH",
+	"HLT_e24_lhmedium_L1EM20VH",
 	"HLT_e24_lhmedium_iloose_L1EM18VH",
 	"HLT_e24_tight_iloose",
 	"HLT_e24_lhtight_iloose", 
@@ -332,11 +333,15 @@ void ttHMultileptonLooseEventSaver::initialize(std::shared_ptr<top::TopConfig> c
     Wrap2(elevec, [=](const xAOD::Electron& ele) { return (int) xAOD::TruthHelpers::getParticleTruthType(ele); }, *systematicTree, "electron_truthType");
     //Trigger matching
     Wrap2(elevec, [=](const xAOD::Electron& ele) { int is_matched(0); if (ele.isAvailable<char>("TRIGMATCH_HLT_e24_lhmedium_L1EM18VH")) is_matched = ele.auxdataConst<char>("TRIGMATCH_HLT_e24_lhmedium_L1EM18VH"); return (int) is_matched; }, *systematicTree, "electron_match_HLT_e24_lhmedium_L1EM18VH");
+    Wrap2(elevec, [=](const xAOD::Electron& ele) { int is_matched(0); if (ele.isAvailable<char>("TRIGMATCH_HLT_e24_lhmedium_L1EM20VH")) is_matched = ele.auxdataConst<char>("TRIGMATCH_HLT_e24_lhmedium_L1EM20VH"); return (int) is_matched; }, *systematicTree, "electron_match_HLT_e24_lhmedium_L1EM20VH");
     Wrap2(elevec, [=](const xAOD::Electron& ele) { int is_matched(0); if (ele.isAvailable<char>("TRIGMATCH_HLT_e24_lhmedium_iloose_L1EM18VH")) is_matched = ele.auxdataConst<char>("TRIGMATCH_HLT_e24_lhmedium_iloose_L1EM18VH"); return (int) is_matched; }, *systematicTree, "electron_match_HLT_e24_lhmedium_iloose_L1EM18VH");
     Wrap2(elevec, [=](const xAOD::Electron& ele) { int is_matched(0); if (ele.isAvailable<char>("TRIGMATCH_HLT_e26_lhtight_iloose")) is_matched = ele.auxdataConst<char>("TRIGMATCH_HLT_e26_lhtight_iloose"); return (int) is_matched; }, *systematicTree, "electron_match_HLT_e26_lhtight_iloose");
     Wrap2(elevec, [=](const xAOD::Electron& ele) { int is_matched(0); if (ele.isAvailable<char>("TRIGMATCH_HLT_e60_lhmedium")) is_matched = ele.auxdataConst<char>("TRIGMATCH_HLT_e60_lhmedium"); return (int) is_matched; }, *systematicTree, "electron_match_HLT_e60_lhmedium");
     Wrap2(elevec, [=](const xAOD::Electron& ele) { int is_matched(0); if (ele.isAvailable<char>("TRIGMATCH_HLT_e120_lhloose")) is_matched = ele.auxdataConst<char>("TRIGMATCH_HLT_e120_lhloose"); return (int) is_matched; }, *systematicTree, "electron_match_HLT_e120_lhloose");
-  // Trigger matching with low pt threshold triggers
+    //Dilepton
+    Wrap2(elevec, [=](const xAOD::Electron& ele) { int is_matched(0); if (ele.isAvailable<char>("TRIGMATCH_HLT_2e12_lhloose_L12EM10VH")) is_matched = ele.auxdataConst<char>("TRIGMATCH_HLT_2e12_lhloose_L12EM10VH"); return (int) is_matched; }, *systematicTree, "electron_match_HLT_2e12_lhloose_L12EM10VH");    
+    Wrap2(elevec, [=](const xAOD::Electron& ele) { int is_matched(0); if (ele.isAvailable<char>("TRIGMATCH_HLT_e17_lhloose_2e9_lhloose")) is_matched = ele.auxdataConst<char>("TRIGMATCH_HLT_e17_lhloose_2e9_lhloose"); return (int) is_matched; }, *systematicTree, "electron_match_HLT_e17_lhloose_2e9_lhloose");    
+    // Trigger matching with low pt threshold triggers
     Wrap2(elevec, [=](const xAOD::Electron& ele) { int is_matched(0); if (ele.isAvailable<char>("TRIGMATCH_HLT_e17_loose")) is_matched = ele.auxdataConst<char>("TRIGMATCH_HLT_e17_loose"); return (int) is_matched; }, *systematicTree, "electron_match_HLT_e17_loose");
     Wrap2(elevec, [=](const xAOD::Electron& ele) { int is_matched(0); if (ele.isAvailable<char>("TRIGMATCH_HLT_e17_lhloose")) is_matched = ele.auxdataConst<char>("TRIGMATCH_HLT_e17_lhloose"); return (int) is_matched; }, *systematicTree, "electron_match_HLT_e17_lhloose");
     Wrap2(elevec, [=](const xAOD::Electron& ele) { int is_matched(0); if (ele.isAvailable<char>("TRIGMATCH_HLT_e12_loose")) is_matched = ele.auxdataConst<char>("TRIGMATCH_HLT_e12_loose"); return (int) is_matched; }, *systematicTree, "electron_match_HLT_e12_loose");
@@ -397,6 +402,7 @@ void ttHMultileptonLooseEventSaver::initialize(std::shared_ptr<top::TopConfig> c
     Wrap2(muvec, [=](const xAOD::Muon& mu) { int is_matched(0); if (mu.isAvailable<char>("TRIGMATCH_HLT_mu40")) is_matched = mu.auxdataConst<char>("TRIGMATCH_HLT_mu40"); else std::cout << "mu40 N/A!" << std::endl; return (int) is_matched; }, *systematicTree, "muon_match_HLT_mu40");
     Wrap2(muvec, [=](const xAOD::Muon& mu) { int is_matched(0); if (mu.isAvailable<char>("TRIGMATCH_HLT_mu50")) is_matched = mu.auxdataConst<char>("TRIGMATCH_HLT_mu50"); return (int) is_matched; }, *systematicTree, "muon_match_HLT_mu50");
     Wrap2(muvec, [=](const xAOD::Muon& mu) { int is_matched(0); if (mu.isAvailable<char>("TRIGMATCH_HLT_mu18_mu8noL1")) is_matched = mu.auxdataConst<char>("TRIGMATCH_HLT_mu18_mu8noL1"); return (int) is_matched; }, *systematicTree, "muon_match_HLT_mu18_mu8noL1");
+    Wrap2(muvec, [=](const xAOD::Muon& mu) { int is_matched(0); if (mu.isAvailable<char>("TRIGMATCH_HLT_2mu10")) is_matched = mu.auxdataConst<char>("TRIGMATCH_HLT_2mu10"); return (int) is_matched; }, *systematicTree, "muon_match_HLT_2mu10");
 
    // Trigger matching for low pt threshold triggers
     Wrap2(muvec, [=](const xAOD::Muon& mu) { int is_matched(0); if (mu.isAvailable<char>("TRIGMATCH_HLT_mu10")) is_matched = mu.auxdataConst<char>("TRIGMATCH_HLT_mu10"); return (int) is_matched; }, *systematicTree, "muon_match_HLT_mu10");
