@@ -27,7 +27,7 @@ OutputFilename output.root
 #OutputEvents AllEvents
 OutputEvents SelectedEvents
 PerfStats No
-NEvents 0
+NEvents 50000
 
 PRWConfigFiles    ttHMultilepton/tthML.PURWTconfig.361106.root ttHMultilepton/tthML.PURWTconfig.361500.root ttHMultilepton/tthML.PURWTconfig.361501.root ttHMultilepton/tthML.PURWTconfig.361502.root ttHMultilepton/tthML.PURWTconfig.361503.root ttHMultilepton/tthML.PURWTconfig.361504.root ttHMultilepton/tthML.PURWTconfig.361505.root ttHMultilepton/tthML.PURWTconfig.361506.root ttHMultilepton/tthML.PURWTconfig.361507.root ttHMultilepton/tthML.PURWTconfig.361508.root ttHMultilepton/tthML.PURWTconfig.361509.root ttHMultilepton/tthML.PURWTconfig.361510.root ttHMultilepton/tthML.PURWTconfig.361511.root ttHMultilepton/tthML.PURWTconfig.361512.root ttHMultilepton/tthML.PURWTconfig.361513.root ttHMultilepton/tthML.PURWTconfig.361514.root ttHMultilepton/tthML.PURWTconfig.361520.root ttHMultilepton/tthML.PURWTconfig.361521.root ttHMultilepton/tthML.PURWTconfig.361522.root ttHMultilepton/tthML.PURWTconfig.361523.root ttHMultilepton/tthML.PURWTconfig.361524.root ttHMultilepton/tthML.PURWTconfig.361525.root ttHMultilepton/tthML.PURWTconfig.361526.root ttHMultilepton/tthML.PURWTconfig.361527.root ttHMultilepton/tthML.PURWTconfig.361528.root ttHMultilepton/tthML.PURWTconfig.361529.root ttHMultilepton/tthML.PURWTconfig.361530.root ttHMultilepton/tthML.PURWTconfig.361531.root ttHMultilepton/tthML.PURWTconfig.361532.root ttHMultilepton/tthML.PURWTconfig.361533.root ttHMultilepton/tthML.PURWTconfig.361534.root ttHMultilepton/tthML.PURWTconfig.410000.root
 PRWLumiCalcFiles  ttHMultilepton/ilumicalc_histograms_HLT_mu20_iloose_L1MU15_267073-271744.root ttHMultilepton/ilumicalc_histograms_HLT_mu20_iloose_L1MU15_276262-279598.root
@@ -74,7 +74,7 @@ TruthBlockInfo True
 
 # Don't be clever
 SELECTION dummy
-TRIGDEC HLT_mu20_iloose_L1MU15 HLT_mu26_imedium HLT_mu40 HLT_mu50 HLT_e24_lhmedium_L1EM18VH HLT_e24_lhmedium_iloose_L1EM18VH HLT_e26_lhtight_iloose HLT_e60_lhmedium HLT_e120_lhloose HLT_mu18_mu8noL1
+TRIGDEC HLT_mu20_iloose_L1MU15 HLT_mu26_imedium HLT_mu40 HLT_mu50 HLT_e24_lhmedium_L1EM18VH HLT_e24_lhmedium_L1EM20VH HLT_e24_lhmedium_iloose_L1EM18VH HLT_e26_lhtight_iloose HLT_e60_lhmedium HLT_e120_lhloose HLT_mu18_mu8noL1 HLT_2mu10 HLT_2e12_lhloose_L12EM10VH HLT_e17_lhloose_2e9_lhloose 
 
 SELECTION loose
 INITIAL
